# quant-stack

./: .gitignore  AGENTS.md  README.md  discovery.py  execution.py  generate_dashboard.py  live_swarm.py  main.py  mass_fetch_historical.py  pipeline_artifacts.py  pyproject.toml  research.py  test_deepseek.py  test_engine_core.py  test_live_swarm_experience_logging.py  test_quant_stack_indicators_strategies.py  test_swarm_agent.py  validate_bb_strategy.py  validate_grid_strategy.py  verify_phase17_artifacts.py
.claude/: CLAUDE.md
_archive/: SmartDCAV#09.mq5  agent_sig.txt
_research_notebooks/: dashboard.ipynb
configs/: README.md
docs/: PIPELINE_ACCEPTANCE.md  REPO_MAP.md  api_tools_integration.md  repo_structure_migration_plan.md
engine/: __init__.py  analytics_pro.py  backtester.py  backtester_bb.py  deps.py  evaluator.py  grid_backtester.py  monte_carlo.py  schemas.py
evolution/: __init__.py  experience_pool.py  research_guard.py  schemas.py
quant_stack/: __init__.py
scripts/: README.md  __init__.py  build_bybit_btcusdt_feature_dataset.py  run_macd_td_v6_intake.py  run_phase19_macd_td_auto.py  run_pipeline_acceptance.py  run_rsi_momentum_chop_filter_hypothesis.py  run_rsi_momentum_context_validation.py  run_rsi_momentum_drawdown_attribution.py  run_rsi_momentum_holdout_validation.py  run_rsi_momentum_multisymbol_generalization.py  run_rsi_momentum_optimization.py  run_rsi_momentum_portfolio_validation.py  run_rsi_momentum_robustness.py  run_smart_dca_btc.py  run_smart_dca_xau_v2.py  run_smart_dca_xauusd.py
strategy_families/: __init__.py  base.py  (+4 more)
(+359 files in other folders)
